--- a/nuspec/Acr.XamForms.BarCodeScanner.nuspec
+++ b/nuspec/Acr.XamForms.BarCodeScanner.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.BarCodeScanner</id>
-        <version>2.0.0</version>
+        <version>2.0.1</version>
         <title>Barcode Plugin for Xamarin.Forms</title>
         <description>Barcode scanning and creation for Xamarin.Forms built on ZXing.Net.Mobile</description>
         <authors>Allan Ritchie</authors>
@@ -13,22 +13,25 @@
         <tags>xamarin barcode android ios winphone</tags>
         <dependencies>
             <group>
-                <dependency id="Xamarin.Forms" version="[1.3.1.6296, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.2.6316, 2.0)" />
             </group>
             <group targetFramework="MonoAndroid">
-                <dependency id="Xamarin.Forms" version="[1.3.1.6296, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.2.6316, 2.0)" />
                 <dependency id="ZXing.Net.Mobile" version="[1.4.7.1, 2.0)" />
             </group>
             <group targetFramework="MonoTouch">
-                <dependency id="Xamarin.Forms" version="[1.3.1.6296, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.2.6316, 2.0)" />
                 <dependency id="ZXing.Net.Mobile" version="[1.4.7.1, 2.0)" />
             </group>
             <group targetFramework="wp8">
-                <dependency id="Xamarin.Forms" version="[1.3.1.6296, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.2.6316, 2.0)" />
                 <dependency id="ZXing.Net.Mobile" version="[1.4.7.1, 2.0)" />
             </group>
         </dependencies>
         <releaseNotes>
+2.0.1
+Update to Xamarin 1.3.2
+
 2.0
 Update to iOS unified
 Update to Xamarin Forms 1.3.1
