--- a/nuspec/Acr.XamForms.nuspec
+++ b/nuspec/Acr.XamForms.nuspec
@@ -12,9 +12,11 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>xamarin</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="[1.3.1.6296, 2.0)" />
+            <dependency id="Xamarin.Forms" version="[1.3.2.6316, 2.0)" />
         </dependencies>
         <releaseNotes>
+2.0.1
+Update to Xamarin.Forms 1.3.2
 2.0
 Remove unnecessary modules
 
